# crossword_solver

./: .flake8  README.md  pyproject.toml  setup.py
puzzles/puzzle1/: board.txt  prompts.csv
src/: config.py
src/clues/: README.md  parse_clues.py
src/crossword_builder/: build_crossword.py
src/pos_analysis/: analyse.py  get_answer_properties.py
src/similarity/: gensim_similarity.py  hf_example.py  hf_similarity.py  openai_example.py  wordnet_similarity.py
