[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "crossword_solver"
description = "package to solve crossword puzzles"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [{ name = "Abhishek Roy", email = "royabhishek77@gmail.com" }]
dependencies = ["numpy", "nltk", "pandas", "torch"]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]  # ["."] by default
# include = ["mypackage*"]  # ["*"] by default
# exclude = ["mypackage.tests*"]  # empty by default
# namespaces = false  # true by default